--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,117 +1,216 @@
-<div>
-  <label for="exampleFormControlInput1">Tournament Name</label>
-  <input type="text" class="form-control" name="tourneyName" [(ngModel)]="tourneyName" placeholder="Name"
-    [disabled]="textDisabled" [value]="inText">
-</div>
-<div class="form-group">
-  <br>
-  <label for="exampleFormControlTextarea1">Participants / Teams</label>
-  <li>Limit 8 participants/teams.</li>
-  <li>One entry per line.</li>
-  <textarea name="teamName" class="form-control" id="exampleFormControlTextarea1" rows="3"
-    placeholder="Participant Names / Team Names" [disabled]="textDisabled" [(ngModel)]="newTeam"></textarea>
-</div>
-
-<!-- <div class="form-group form-check">
+<form>
+  <div>
+    <label for="exampleFormControlInput1">Tournament Name</label>
+    <input type="text" class="form-control" name="tourneyName" [(ngModel)]="tourneyName" placeholder="Name" [disabled]="textDisabled" [value]="inText">
+  </div>
+  <div class="form-group">
+    <br>
+    <label for="exampleFormControlTextarea1">Participants / Teams</label>
+    <li>Limit 8 participants/teams</li>
+    <li>One entry per line.</li>
+    <textarea [(ngModel)]="teamName" (ngModelChange)="onTeamNamesChanged()" name="teamName" class="form-control"
+      id="exampleFormControlTextarea1" rows="3" placeholder="Participant Names / Team Names" [disabled]="textDisabled" [value]="inText"></textarea>
+  </div>
+</form>
+<div class="form-group form-check">
   <input type="checkbox" class="form-check-input" id="randomCheck">
-  <label class="form-check-label" for="randomCheck" >Randomize</label>
- 
-</div> -->
+  <label class="form-check-label" for="randomCheck">Randomize</label>
+</div>
 <!-- ?? SUBMIT navigateTo('courses'); ??-->
 <!-- DISABLE SUBMIT after click until EDIT or CLEAR is clicked -->
-<button style="margin-right: 10px" [disabled]="disableSubmitButton" (click)="tourney(); addTeams(newTeam)"
-  class="btn btn-success" type="button" mat-raised-button>
+<button [disabled]="disableSubmitButton" (click)="tourney()" class="btn btn-success" type="button" mat-raised-button>
   Submit
 </button>
-<button style="margin-right: 10px" class="pull-right" (click)="editSeeds()" class="btn btn-warning" type="button"
-  mat-raised-button>
+<button (click)="editSeeds()" class="btn btn-warning" type="button" mat-raised-button>
   Edit
 </button>
-<button style="margin-right: 10px" class="btn btn-info" (click)=random() mat-raised-button>random</button>
-<button style="margin-right: 10px" (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
+<button (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
   Clear
 </button>
+<button style="margin-right: 10px" class="btn btn-info" (click)=random() mat-raised-button>random</button>
 
 <h1>
   <br>
   <!-- if making 2nd page, call title entered through previous page -->
   {{tourneyTitle}}
+
 </h1>
 <main id="tournament">
-
-
-
   <ul class="round round-1">
-    <tr *ngFor="let Team of teams; let i = index">
-      <!-- loop for how many teams -->
-      <li class="spacer">&nbsp;</li>
-      <li class="game game-top winner">Team {{1+i}} {{Team}}<span>
-        </span></li>
-      <div class="btn-group-sm">
-        <button type="button" class="btn btn-secondary" (click)="winner(1, i, getTeamName(i))">Advance</button>
-        <button class="btn btn-danger pull-right" (click)="removeTeams(i)">X</button>
-      </div>
+    <!-- <tr *ngFor="let team of teamArray; let i = index"> -->
+    <!-- loop for how many teams -->
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">{{getTeamName(0)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 1, getTeamName(0))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(0)">X</button>
+        </div>
+      </span></li>
+
+    <li class="game game-spacer">&nbsp;</li>
+
+    <li class="game game-bottom ">{{getTeamName(1)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 1, getTeamName(1))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(1)">X</button>
+        </div>
+        <!-- disable advance button after winner moves on or until CLEAR -->
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">{{getTeamName(2)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 2, getTeamName(2))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(2)">X</button>
+        </div>
+      </span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">{{getTeamName(3)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 2, getTeamName(3))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(3)">X</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">{{getTeamName(4)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 3, getTeamName(4))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(4)">X</button>
+        </div>
+      </span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">{{getTeamName(5)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 3, getTeamName(5))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(5)">X</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">{{getTeamName(6)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 4, getTeamName(6))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(6)">X</button>
+        </div>
+      </span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">{{getTeamName(7)}}<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner(1, 4, getTeamName(7))">Advance</button>
+          <button class="btn btn-danger pull-right" (click)="removeTeams(7)">X</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+    <!--
+      <li class="game game-top winner">TEAM1 <span>54</span></li>
       <li class="game game-spacer">&nbsp;</li>
-    </tr>
+      <li class="game game-bottom ">TEAM1<span>52</span></li>
+
+      <li class="spacer">&nbsp;</li>
+
+      <li class="game game-top winner">TEAM1<span>65</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>54</span></li>
+
+      <li class="spacer">&nbsp;</li>
+
+      <li class="game game-top winner">TEAM1<span>67</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>63</span></li>
+
+      <li class="spacer">&nbsp;</li>
+
+      <li class="game game-top winner">TEAM1<span>73</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>61</span></li>
+
+      <li class="spacer">&nbsp;</li> -->
   </ul>
-
-
-
   <ul class="round round-2">
     <!-- loop for winning teams-->
     <li class="spacer">&nbsp;</li>
-    <li class="game game-top winner">{{getWinnerName(1, 0)}}{{getWinnerName(1, 1)}}<span>
+
+    <li class="game game-top winner">{{getWinnerName(1, 1)}} <span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary"
-            (click)="winner(2, 1, getWinnerName(1, 0)); winner(2, 0, getWinnerName(1, 1))">Advance</button>
+          <button type="button" class="btn btn-secondary" (click)="winner(2, 1, getWinnerName(1, 1))">Advance</button>
         </div>
       </span></li>
     <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-top winner">{{getWinnerName(1, 2)}}{{getWinnerName(1, 3)}}<span>
+    <li class="game game-bottom ">{{getWinnerName(1, 2)}} <span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary"
-            (click)="winner(2, 1, getWinnerName(1, 2));  winner(2, 0, getWinnerName(1, 3))">Advance</button>
+          <button type="button" class="btn btn-secondary" (click)="winner(2, 1, getWinnerName(1, 2))">Advance</button>
         </div>
       </span></li>
+
     <li class="spacer">&nbsp;</li>
-    <li class="game game-top winner">{{getWinnerName(1, 4)}}{{getWinnerName(1, 5)}}<span>
+
+    <li class="game game-top winner">{{getWinnerName(1, 3)}} <span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary"
-            (click)="winner(2, 2, getWinnerName(1, 4));  winner(2, 3, getWinnerName(1, 5))">Advance</button>
+          <button type="button" class="btn btn-secondary" (click)="winner(2, 2, getWinnerName(1, 3))">Advance</button>
         </div>
       </span></li>
     <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-top winner">{{getWinnerName(1, 6)}}{{getWinnerName(1, 7)}}<span>
+    <li class="game game-bottom ">{{getWinnerName(1, 4)}} <span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary"
-            (click)="winner(2, 2, getWinnerName(1, 6));  winner(2, 3, getWinnerName(1, 7))">Advance</button>
+          <button type="button" class="btn btn-secondary" (click)="winner(2, 2, getWinnerName(1, 4))">Advance</button>
         </div>
       </span></li>
+
     <li class="spacer">&nbsp;</li>
+
+    <!-- <li class="game game-top ">Memphis <span>48</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom winner">Mich St <span>70</span></li>
+
+      <li class="spacer">&nbsp;</li>
+
+      <li class="game game-top ">Creighton <span>50</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom winner">Duke <span>66</span></li>
+
+      <li class="spacer">&nbsp;</li> -->
   </ul>
-
-
-
   <ul class="round round-3">
     <!-- loop calling winning teams-->
     <li class="spacer">&nbsp;</li>
-    <li class="game game-top winner">{{getWinnerName(2, 1)}}{{getWinnerName(2, 0)}}<span>
+
+    <li class="game game-top winner">{{getWinnerName(2, 1)}} <span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary"
-            (click)="winner(3, 1, getWinnerName(2, 1)); winner(3, 2, getWinnerName(2, 0))">Advance</button>
+          <button type="button" class="btn btn-secondary" (click)="winner(3, 1, getWinnerName(2, 1))">Advance</button>
         </div>
       </span></li>
     <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-top winner">{{getWinnerName(2, 2)}}{{getWinnerName(2, 3)}}<span>
+    <li class="game game-bottom ">{{getWinnerName(2, 2)}}<span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary"
-            (click)="winner(3, 1, getWinnerName(2, 2)); winner(3, 2, getWinnerName(2, 3))">Advance</button>
+          <button type="button" class="btn btn-secondary" (click)="winner(3, 1, getWinnerName(2, 2))">Advance</button>
         </div>
       </span></li>
+
     <li class="spacer">&nbsp;</li>
+    <!--
+      <li class="game game-top ">Mich St <span>61</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom winner">Duke <span>71</span></li>
+
+      <li class="spacer">&nbsp;</li> -->
   </ul>
+  <!-- <ul class="round round-4">
+      <li class="spacer">&nbsp;</li>
+
+      <li class="game game-top winner">Lousville <span>85</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">Duke <span>63</span></li>
+
+      <li class="spacer">&nbsp;</li>
+    </ul> -->
   <ul class="round round-5">
     <!-- call winning team-->
-    <li class="game game-top winner">{{getWinnerName(3, 1)}}{{getWinnerName(3, 2)}}<span>WINNER</span></li>
+    <li class="game game-top winner">{{getWinnerName(3, 1)}} <span>WINNER</span></li>
   </ul>
 </main>
